@@ -1,2 +1,5 @@
+  * Load Module::Install::Base explicitly so that Module::Install correctly
+    finds us if we're the first extension loaded.
+
 0.01  Fri, 03 Jul 2009 02:16:54 +0200
   * Initial release.
